--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .env
-package.json
 node_modules
 jdcookie.txt
 box.dat
@@ -8,3 +7,4 @@ logs
 .history
 wskey.text
 wskey_ptkey.js
+package-lock.json
